# housing_cost

./: .gitignore  README.md  data.dvc  mlartifacts.dvc  mlruns.dvc  pyproject.toml  requirements.txt
.dvc/: config
notebooks/: 1.0-mv-data-understanding.ipynb  2.0-mv-eda-baseline.ipynb  2.0-mv-eda.ipynb  2.1-mv-eda-preprocessing.ipynb  2.1-mv-eda.ipynb  2.2-mv-eda-feature-selection.ipynb  3.0-mv-modelling-baseline.ipynb  3.0-mv-modelling-init.ipynb  3.1-mv-modelling-baseline.ipynb  3.1-mv-test-eda.ipynb  3.2-mv-modelling-pf-regularization.ipynb  3.3-mv-modelling-random-forest.ipynb  3.4-mv-modelling-grad-boost.ipynb  4.0-mv-save-model.ipynb  _mlflow.ipynb
src/: utils.py
src/data/: make_dataset.py  make_datasets.py
src/features/: build_features.py  feature_stats.py
src/models/: predict_model.py  train_model.py
src/visualization/: visualize.py
test/: _mlflow.ipynb
web/: Dockerfile  requirements.txt
web/app/: server.py
web/src/: server.py
web/test/: client.py
web/web_venv/: pyvenv.cfg
