[tool.poetry]
name = "housing-cost"
version = "0.1.0"
description = "dependencies for housing_cost project analysis and modelling"
authors = ["mvulf <vulfjob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
ydata-profiling = {git = "https://github.com/mvulf/ydata-profiling"}
ipywidgets = "^8.1.2"
dvc = "^3.49.0"
dvc-gdrive = "^3.0.1"
mlflow = "^2.11.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
